# PulseOS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  appCarbonQt.desktop  main.cpp
.github/workflows/: release-appimage.yml
backend/: BackendManager.cpp  BackendManager.h  SystemController.cpp  SystemController.h
backend/core/: cpu_stat.cpp  cpu_stat.h  memory_stat.cpp  memory_stat.h  process_model.cpp  process_model.h  system_info.cpp  system_info.h
backend/energy/: EnergyEstimator.cpp  EnergyEstimator.h
backend/storage/: DataLogger.cpp  DataLogger.h
backend/utils/: proc_reader.cpp  proc_reader.h
qml/: App.qml
qml/components/: ExitDialog.qml
qml/global/: ItemsFooter.qml  ItemsOriginal.qml
qml/pages/: Home.qml  Performance.qml  Processes.qml
qml/window/: AboutDialog.qml  MainWindow.qml
